fixed top spacing issue

--- a/src/components/Jumbotron/Jumbotron.css
+++ b/src/components/Jumbotron/Jumbotron.css
@@ -5,4 +5,5 @@
     text-align: center;
     color:white;
     font-family: 'Alegreya Sans', sans-serif;
+    clear:both;
 }
